# daily-hot-mcp

./: .env.example  .gitignore  README.md  build_site.py  config.py  main.py  mkdocs.yml  pyproject.toml  requirements.txt  run.py  scheduler.py
scraper/: __init__.py  chinese_hotnews.py  github_scraper.py  hackernews_scraper.py  markdown_generator.py  producthunt_scraper.py  translator.py
